reparación de la vista responsiva para movil

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-
+/* 
  @media (max-width: 1200px) {
    tablet devices  }
 @media (max-width: 992px) {
@@ -39,4 +39,4 @@
   .section-header .brand-wrap, .section-header .search-wrap, .section-header .widget-header, .header-main .brand-wrap, .header-main .search-wrap, .header-main .widget-header {
     margin-bottom: 1rem; } }
 
- sourceMappingURL=responsive.css.map  
+ sourceMappingURL=responsive.css.map   */
