--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,9 @@
-/*
-@media (max-width: 1200px) {
-   tablet devices  }
+
+/*@media (max-width: 1200px) {
+   tablet devices  }*/
+
 @media (max-width: 992px) {
-  /* small tablet devices 
+  small tablet devices 
   .slider-main .item-slide {
     height: auto; }
 
@@ -13,8 +14,9 @@
 
   .border-cols > [class*="col-"] {
     border-width: 0 0 1px 1px; } }
+
 @media all and (max-width: 768px) {
-  /* mobile devices 
+  mobile devices 
   .navbar {
     padding: 1rem; }
 
